# 2025-zhou-hipct-hierarchical-segmentation

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
notebooks/: postprocessing.ipynb  pre-processing.ipynb  prepare-nnunet.ipynb  preprocessing_manual_annot.ipynb  preprocessing_pseudo_lbls.ipynb
registration/: R_README.md  convert_im_type.py  helper.py  loading.py  registration.py  registration_config.py  resample.py  resample_config.py
registration/correlation/: correlative_nnunet_dataset.py  generate_training_column.py
registration/registration_lists/: LADAF-2020-27_kidney-left.json  LADAF-2021-17_kidney-right.json  README.md
registration/tfms/LADAF-2020-27_kidney-left/: 12.1_reg_to_25.08_slice_776_2829_crop.tfm  2.58_reg_to_12.1_slice_2371_3769_crop.tfm
registration/tfms/LADAF-2021-17_kidney-right_voi2/: 13.0_reg_to_25.0_VOI-2memory_efficient_crop.tfm  13.0_reg_to_25.0_VOI-2memory_efficient_fixed_info.json  13.0_reg_to_25.0_VOI-2memory_efficient_moving_info.json
registration/tfms/LADAF-2021-17_kidney-right_voi2-1/: 5.2_reg_to_13.0_VOI-2.1memory_efficient_crop.tfm  5.2_reg_to_25.0_VOI-2.1memory_efficient_crop.tfm
registration/tfms/LADAF-2021-17_kidney-right_voi3-1/: 5.2_reg_to_13.0_VOI-3.1memory_efficient_crop.tfm  5.2_reg_to_25.0_VOI-3.1memory_efficient_crop.tfm
segmentation/: S_README.md
segmentation/models/kidney_swinunetr/: config.py  test.py  (+4 more)
segmentation/postprocessing/: postprocessor.py  pp_ladaf-2020-27-left_12-1.py  pp_ladaf-2020-27-left_2-58.py  pp_ladaf-2020-27-left_25-08.py
segmentation/preprocessing/: helper.py  preprocessor.py
(+46 files in other folders)
