[project]
name = "2025-zhou-hipct-hierarchical-segmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "natsort>=8.4.0",
    "scikit-image==0.24.0",
    "scikit-learn>=1.6.1",
    "simpleitk>=2.5.0",
    "tqdm>=4.67.1",
]
